--- a/parsing/src/main/resources/application.properties
+++ b/parsing/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 #Log Config
 #debug: true
-logging.level.com.enliple.parsing=INFO
+logging.level.com.enliple.parsing.=INFO
 
 ## Database config ## 
 ## Maria ##
